# model-graph-neural-net

./: .envrc  .gitignore  Dockerfile  Makefile  Makefile.am  README  README.md  bootstrap.sh  configure.ac  dataset.dvc  docker-compose.yml  logging.conf  requirements.txt  setup.py
.dvc/: config
.github/: tox.yml
.github/workflows/: bandit.yml  build.yml  cloudbot-call.yml  latex.yml
cluster/: Dockerfile  Makefile.am  Makefile.in  README.md  cluster_build.md  requirements.txt
dataset/: 0cee4dcb-f3af-4352-b8b0-ba1f0931c6b0.dot.dvc  0cee4dcb-f3af-4352-b8b0-ba1f0931c6b0.metadata.json.dvc  0cee4dcb-f3af-4352-b8b0-ba1f0931c6b0.png.dvc  0cee4dcb-f3af-4352-b8b0-ba1f0931c6b0.terraform.lock.hcl.dvc  0cee4dcb-f3af-4352-b8b0-ba1f0931c6b0.terraform.tfstate.dvc  1c102234-7b50-4287-9267-bf27ee431a1e.dot.dvc  1c102234-7b50-4287-9267-bf27ee431a1e.metadata.json.dvc  1c102234-7b50-4287-9267-bf27ee431a1e.png.dvc  1c102234-7b50-4287-9267-bf27ee431a1e.terraform.lock.hcl.dvc  1c102234-7b50-4287-9267-bf27ee431a1e.terraform.tfstate.dvc  40926642-1193-4bc1-9d0f-7d765d30f49c.dot.dvc  40926642-1193-4bc1-9d0f-7d765d30f49c.metadata.json.dvc  40926642-1193-4bc1-9d0f-7d765d30f49c.png.dvc  40926642-1193-4bc1-9d0f-7d765d30f49c.terraform.lock.hcl.dvc  40926642-1193-4bc1-9d0f-7d765d30f49c.terraform.tfstate.dvc  4d660caf-43fb-4d0f-ba3f-87da859afa58.dot.dvc  test1.gephi
docs/: clauster_build.md  cluster_build.md  gke_build.md  graph.md  manage_storage_key.md  todo.md
docs/paper/: gnn.tex  mybib.bib
docs/presentation/: Makefile.am
gcloud/: Dockerfile  pod.yaml
gnn/: collect_data.py
gnn/collection/: Dockerfile  collection.py  requirements.txt
gnn/lib/: common.py
gnn/training/: Dockerfile  README.md  requirements.txt  training.py
gnn/visualize/: visualize.py
paper/: Dockerfile  Makefile.am  gnn.tex  mybib.bib  preamble.tex  title.tex
paper/code/: gen_graph.sh  graph.dot
presentation/: Makefile.am  README.md  gnn-pres.tex  preamble.tex
src/: collect_data.py  draw.py  helpers.py  main.py  network.py  requirements.txt  train.py
src/lib/: cleaning.py  collection_helpers.py  common.py  data.py  helpers.py  terraform.py  terraform_helpers.py  training_helpers.py
src/model/: 3db34601-81e3-4e18-acc1-cfe9e69bc1e2.dot  45072cad-2867-4e3c-94e9-6f13ca7d71de.dot  8704fd0b-1113-4f68-b0f0-bcc1dfcd8f0e.dot  91f83b84-d41d-4d28-8b61-85e9dc47eb31.dot
terraform/: .terraform.lock.hcl  README.md  main.tf  provider.tf  terraform.tfvars  variables.tf
terraform/.model/: .metadata.json
tests/: requirements.txt
