#ACLOCAL_AMFLAGS = -I m4
#SUBDIRS=cluster
#CCLD = $(CC)
#LINK = $(CCLD) $(AM_CFLAGS) $(CFLAGS) $(AM_LDFLAGS) $(LDFLAGS) -o $@

python: ## build the python env
	#@$(PY39) -m venv _build 
	#. _build/bin/activate
	@$(PY39) -m pip install --upgrade pip
	#@$(PY39) -m pip install tox
	#@$(PY39) -m pip install -r gnn/requirements.txt --no-warn-script-location
	#@$(PY39) -m pip install -r tests/requirements-test.txt --no-warn-script-location